# SatelliteCloudGenerator

./: .gitignore  README.md  main.py  pyproject.toml
src/: CloudSimulator.py  band_magnitudes.py
