[project]
name = "satellitecloudgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.2",
    "ipykernel>=7.2.0",
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "rasterio>=1.5.0",
    "torch>=2.10.0",
]
